--- a/node11.html
+++ b/node11.html
@@ -114,42 +114,54 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <H1><A NAME="SECTION04140000000000000000">
 Comentarios y Consejos</A>
 </H1>
+
 <P>
+
 <H4><A NAME="SECTION04140010000000000000">
 How can I push a local Git branch to a remote with a different name easily?</A>
 </H4>
-<P><PRE>
+  
+
+<P>
+<PRE>
 $ git branch -a
 * gh-pages
   remotes/origin/HEAD -&gt; origin/gh-pages
   remotes/origin/gh-pages
-</PRE><I>
+</PRE>
 Of course a solution for this way to work is to rename your master branch:
-</I><PRE>
+<PRE>
 $ git branch -m master gh-pages
 [~/Downloads/tmp(gh-pages)]$ git branch 
 * gh-pages
 </PRE>
+
 <P>
-<I>Otherwise, you can 
+Otherwise, you can 
 do your initial push this way:
-</I><PRE>
+<PRE>
 $ git push -u origin master:gh-pages
-</PRE><I>
+</PRE>
 Option <code>-u</code>: for every branch that is up to date or successfully pushed, add 
 <code>upstream</code> (tracking) reference, used by argument-less <code>git-pull</code>.
-</I>
+
 <P>
+
 <UL>
 <LI><A NAME="tex2html98"
   HREF="http://stackoverflow.com/questions/5738797/how-can-i-push-a-local-git-branch-to-a-remote-with-a-different-name-easily">How can I push a local Git branch to a remote with a different name easily?</A>
 </LI>
 </UL>
+
 <P>
+
 <H4><A NAME="SECTION04140020000000000000">
 favicons y shortcut icons</A>
 </H4>
+  
+
 <P>
+
 <UL>
 <LI>A <A NAME="2961"></A><SPAN  CLASS="textbf">favicon</SPAN> (short for <A NAME="2963"></A><SPAN  CLASS="textbf">Favorite icon</SPAN>), also known as a <A NAME="2965"></A><SPAN  CLASS="textbf">shortcut</SPAN> 
 icon, is a file containing one or more small icons, 
@@ -187,7 +199,9 @@ typically show a page's favicon next to the page's title on the tab
 </PRE>
 </LI>
 </UL>
+
 <P>
+
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html1002"
   HREF="node12.html">
