--- a/node13.html
+++ b/node13.html
@@ -126,32 +126,40 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BR>
 Práctica: Palabras Repetidas
 </H1>
+
 <P>
-<I>Se trata de producir una salida en las que las palabras repetidas consecutivas sean reducidas a una sola aparición.
+Se trata de producir una salida en las que las palabras repetidas consecutivas sean reducidas a una sola aparición.
 Rellena las partes que faltan.
-</I>
+
 <P>
+
 <H4><A NAME="SECTION04160010000000000000">
 Donde</A>
 </H4>
-<P><PRE>
+  
+
+<P>
+<PRE>
 [~/srcPLgrado/repeatedwords(master)]$ pwd -P
 /Users/casiano/local/src/javascript/PLgrado/repeatedwords
 [~/srcPLgrado/repeatedwords(master)]$ git remote -v
 origin  ssh://git@bitbucket.org/casiano/pl-grado-repeated-words.git (fetch)
 origin  ssh://git@bitbucket.org/casiano/pl-grado-repeated-words.git (push)
 </PRE>
+
 <P>
-<I>Véase:
+Véase:
 <A NAME="tex2html103"
   HREF="https://bitbucket.org/casiano/pl-grado-repeated-words">https://bitbucket.org/casiano/pl-grado-repeated-words</A>
-</I>
 <P>
+
 <H4><A NAME="SECTION04160020000000000000">
 Ejemplo de ejecución</A>
 </H4>
+  
+
 <P>
-<I>
+
 <DIV ALIGN="CENTER"><A NAME="figure:csv"></A><A NAME="1213"></A>
 <TABLE>
 <CAPTION ALIGN="BOTTOM"><STRONG>Figura:</STRONG>
@@ -160,13 +168,16 @@ Ejemplo de pantalla de La aplicación para Repeated Words</CAPTION>
  WIDTH="769" HEIGHT="410" BORDER="0"
  SRC="repeated_words.png"
  ALT=""
-</I>
+
 <P>
+
 <H4><A NAME="SECTION04160030000000000000">
 Estructura</A>
 </H4>
+  
+
 <P>
-<I>
+
 <pre>
 [~/Dropbox/src/javascript/PLgrado/repeatedwords(master)]$  tree --charset utf-8 
 .
@@ -180,11 +191,15 @@ Estructura</A>
 
 0 directories, 7 files
 </pre>
-</I>
+
 <P>
+
 <H4><A NAME="SECTION04160040000000000000">
 index.html</A>
-</H4><PRE>
+</H4>
+  
+
+<PRE>
 [~/Dropbox/src/javascript/PLgrado/repeatedwords(master)]$ cat index.html 
 &lt;html&gt;
   &lt;head&gt;
@@ -215,7 +230,9 @@ index.html</A>
   &lt;/body&gt;
 &lt;/html&gt;
 </PRE>
+
 <P>
+
 <OL>
 <LI><A NAME="tex2html104"
   HREF="http://www.w3.org/TR/html-markup/input.file.html">Tag input</A>
@@ -224,9 +241,11 @@ index.html</A>
 <H4><A NAME="SECTION04160050000000000000">
 global.css</A>
 </H4>
+  
+
 <P>
-<I>Rellena los estilos para <code>hidden</code> y <code>unhidden</code>:
-</I><PRE>
+Rellena los estilos para <code>hidden</code> y <code>unhidden</code>:
+<PRE>
 [~/Dropbox/src/javascript/PLgrado/repeatedwords(master)]$ cat global.css 
 html *
 {
@@ -266,7 +285,9 @@ body
 {
  background-color:#b0c4de;  /* blue */
 </PRE>
+
 <P>
+
 <OL>
 <LI><A NAME="tex2html105"
   HREF="http://www.w3schools.com/cssref/pr_class_display.asp">CSS display Property</A>
@@ -278,9 +299,11 @@ body
 <H4><A NAME="SECTION04160060000000000000">
 repeated_words.js</A>
 </H4>
+  
+
 <P>
-<I>Rellena las expresiones regulares que faltan:
-</I><PRE>
+Rellena las expresiones regulares que faltan:
+<PRE>
 [~/srcPLgrado/repeatedwords(master)]$ cat repeated_words.js 
 "use strict"; // Use ECMAScript 5 strict mode in browsers that support it
 
@@ -327,7 +350,9 @@ function escapeHtml(string) {
     return ____________;
   });
 </PRE>
+
 <P>
+
 <OL>
 <LI><A NAME="tex2html107"
   HREF="http://api.jquery.com/event.target/">jQuery event.target</A>
@@ -354,10 +379,15 @@ function escapeHtml(string) {
   HREF="http://underscorejs.org/#template">Underscore: template</A>
 </LI>
 </OL>
+
 <P>
+
 <H4><A NAME="SECTION04160070000000000000">
 Ficheros de Entrada</A>
-</H4><PRE>
+</H4>
+  
+
+<PRE>
 [~/Dropbox/src/javascript/PLgrado/repeatedwords(master)]$ cat input2.txt 
 habia una vez 
 vez un viejo viejo
@@ -374,7 +404,9 @@ vez &amp; un viejo viejo &lt;puchum&gt;
 hidalgo  &amp; &lt;pacham&gt; que vivia 
 vivia &lt;/que se yo&gt;
 </PRE>
+
 <P>
+
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html1032"
   HREF="node14.html">
