--- a/node14.html
+++ b/node14.html
@@ -100,14 +100,14 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 
 <H1><A NAME="SECTION04170000000000000000">
 Ejercicios</A>
-</H1><I>
+</H1>
 El formato  <A NAME="2999"></A><SPAN  CLASS="textbf">INI</SPAN> es un formato estandar 
 para la escritura de ficheros de configuración. 
 Su estrucutra básica se compone de
 "secciones" y "propiedades". Véase la entrada de la wikipedia
 <A NAME="tex2html115"
   HREF="http://en.wikipedia.org/wiki/INI_file">INI</A>.
-</I><PRE>
+<PRE>
 ; last modified 1 April 2001 by John Doe
 [owner]
 name=John Doe
@@ -119,6 +119,7 @@ server=192.0.2.62
 port=143
 file = "payroll.dat"
 </PRE>
+
 <OL>
 <LI>Escriba un programa javascript que obtenga las cabeceras de sección de un fichero 
 INI
@@ -140,7 +141,9 @@ INI
 </PRE>
 </LI>
 </OL>
+
 <P>
+
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html1053"
   HREF="node15.html">
