--- a/node17.html
+++ b/node17.html
@@ -115,13 +115,16 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BR>
 Práctica: Analizador Léxico para Un Subconjunto de JavaScript
 </H1>
+
 <P>
+
 <H4><A NAME="SECTION041100010000000000000">
 TDOP, Top Down Operator Precedence</A>
-</H4><I>
+</H4>
+  
 
 Vamos a trabajar a partir de este repo de Douglas Crockford:
-</I>
+
 <UL>
 <LI><A NAME="tex2html145"
   HREF="https://github.com/douglascrockford/TDOP">https://github.com/douglascrockford/TDOP</A>
@@ -165,12 +168,16 @@ This is the file we are going to work in this lab.
 </UL>
 </LI>
 </UL>
+
 <P>
+
 <H4><A NAME="SECTION041100020000000000000">
 Objetivos de la Práctica</A>
 </H4>
+  
+
 <P>
-<I>Douglas Crockford escribió su analizador léxico 
+Douglas Crockford escribió su analizador léxico 
 <A NAME="tex2html149"
   HREF="https://github.com/douglascrockford/TDOP/blob/master/tokens.js">tokens.js</A>
 sin usar expresiones regulares.
@@ -178,13 +185,14 @@ Eso hace que sea extenso (268 líneas). Su analizador es un subconjunto de JS qu
 - entre otras cosas - expresiones regulares ya que
 uno de sus objetivos era que el analizador 
 se analizara a si mismo.
-</I>
+
 <P>
-<I>Reescriba el analizador léxico en <A NAME="tex2html150"
+Reescriba el analizador léxico en <A NAME="tex2html150"
   HREF="https://github.com/douglascrockford/TDOP/blob/master/tokens.js">tokens.js</A>.
 usando expresiones regulares.
-</I>
+
 <P>
+
 <OL>
 <LI>Evite que se hagan copias de la cadena siendo procesada. Muévase dentro de la misma cadena usando
 <code>lastIndex</code>
@@ -257,9 +265,10 @@ en JS. Vea este
 <A NAME="tex2html158"
   HREF="http://jsfiddle.net/casiano/Mw9dW/">jsfiddle</A>
 </LI>
-</OL><I>
-</I>
+</OL>
+
 <P>
+
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html1102"
   HREF="node18.html">
