--- a/node19.html
+++ b/node19.html
@@ -111,12 +111,13 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <A NAME="section:conceptos"></A>
 <BR>
 Conceptos Básicos para el Análisis Sintáctico
-</H1><I>
+</H1>
 Suponemos que el lector de esta sección ha realizado con éxito
 un curso en teoría de autómatas y lenguajes formales.
 Las siguientes definiciones repasan los conceptos mas importantes.
-</I>
-<P><P>
+
+<P>
+<P>
 <DIV><B>Definición  <SPAN CLASS="arabic">2</SPAN>.<SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">1</SPAN></B> &nbsp; 
 <I>Dado un conjunto <SPAN CLASS="MATH"><IMG
  WIDTH="18" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
@@ -153,7 +154,9 @@ la palabra que tiene longitud cero, formada por cero símbolos del conjunto base
  WIDTH="18" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img1.png"
  ALT="$ A$"></SPAN>.</I></DIV><P></P>
-<P><P>
+
+<P>
+<P>
 <DIV><B>Definición  <SPAN CLASS="arabic">2</SPAN>.<SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">2</SPAN></B> &nbsp; 
 <I>Una gramática <SPAN CLASS="MATH"><IMG
  WIDTH="19" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
@@ -207,7 +210,9 @@ Un elemento de <SPAN CLASS="MATH"><IMG
  WIDTH="19" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img9.png"
  ALT="$ V$"></SPAN> que se denomina símbolo de arranque.</I></DIV><P></P>
-<P><P>
+
+<P>
+<P>
 <DIV><B>Definición  <SPAN CLASS="arabic">2</SPAN>.<SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">3</SPAN></B> &nbsp; 
 <I>Dada una gramática <!-- MATH
  $G=(\Sigma,V,P,S)$
@@ -291,7 +296,9 @@ que <!-- MATH
  ALT="$ \mu \stackrel{*}{\Longrightarrow} \delta$"></SPAN>. Una cadena deriva en 0 pasos en si misma.
 </I>
 <P></DIV><P></P>
-<P><P>
+
+<P>
+<P>
 <DIV><A NAME="definition:lenguajegenerado"><B>Definición  <SPAN CLASS="arabic">2</SPAN>.<SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">4</SPAN></B></A> &nbsp; 
 <I>Dada una gramática <!-- MATH
  $G=(\Sigma,V,P,S)$
@@ -322,7 +329,9 @@ generado por <SPAN CLASS="MATH"><IMG
  SRC="img6.png"
  ALT="$ G$"></SPAN> esta formado por las cadenas
 de terminales que pueden ser derivados desde el símbolo de arranque.</I></DIV><P></P>
-<P><P>
+
+<P>
+<P>
 <DIV><B>Definición  <SPAN CLASS="arabic">2</SPAN>.<SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">5</SPAN></B> &nbsp; 
 <I>Una derivación que comienza en el símbolo de arranque y termina en una secuencia
 formada por sólo terminales de <SPAN CLASS="MATH"><IMG
@@ -375,7 +384,9 @@ en la cual en cada paso <!-- MATH
  SRC="img16.png"
  ALT="$ A \rightarrow \gamma$"></SPAN>
 se aplica en la variable sintáctica mas a la izquierda se dice <SPAN  CLASS="textbf">una derivación a izquierdas</SPAN></I></DIV><P></P>
-<P><P>
+
+<P>
+<P>
 <DIV><B>Definición  <SPAN CLASS="arabic">2</SPAN>.<SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">6</SPAN></B> &nbsp; 
 <I>Observe que una derivación puede ser representada como un árbol cuyos nodos
 están etiquetados en <!-- MATH
@@ -409,9 +420,11 @@ la frase <!-- MATH
  WIDTH="110" HEIGHT="32" ALIGN="MIDDLE" BORDER="0"
  SRC="img31.png"
  ALT="$ \gamma = X_1 \ldots X_n$"></SPAN>.  
-Este árbol se llama <A NAME="4142"></A><SPAN  CLASS="textbf">árbol sintáctico concreto</SPAN> asociado 
+Este árbol se llama <A NAME="4146"></A><SPAN  CLASS="textbf">árbol sintáctico concreto</SPAN> asociado 
 con la derivación.</I></DIV><P></P>
-<P><P>
+
+<P>
+<P>
 <DIV><A NAME="definition:arbolconcreto"><B>Definición  <SPAN CLASS="arabic">2</SPAN>.<SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">7</SPAN></B></A> &nbsp; 
 <I>Observe que, dada una frase <!-- MATH
  $x \in L(G)$
@@ -437,7 +450,9 @@ de análisis sintáctico concreto</SPAN> de <SPAN CLASS="MATH"><IMG
  SRC="img34.png"
  ALT="$ x$"></SPAN>. Una derivación determina
 una forma de recorrido del árbol de análisis sintáctico concreto.</I></DIV><P></P>
-<P><P>
+
+<P>
+<P>
 <DIV><B>Definición  <SPAN CLASS="arabic">2</SPAN>.<SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">8</SPAN></B> &nbsp; 
 <I>Una gramática <SPAN CLASS="MATH"><IMG
  WIDTH="19" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
@@ -459,21 +474,21 @@ alguna frase <!-- MATH
  SRC="img32.png"
  ALT="$ x \in L(G)$"></SPAN> para la cual existen dos derivaciones a 
 izquierda (derecha) distintas.</I></DIV><P></P>
+
 <P>
+
 <H2><A NAME="SECTION04211000000000000000"></A>
 <A NAME="ejercicio:tutugrammar"></A>
 <BR>
 Ejercicio
-</H2><I>
+</H2>
 Dada la gramática con producciones:
-</I>
+
 <P>
-<I>
 <BR>
 <BR>
-</I><TABLE CELLPADDING=3>
-<TR><TD ALIGN="LEFT"><I>
-program      <!-- MATH
+<TABLE CELLPADDING=3>
+<TR><TD ALIGN="LEFT">program      <!-- MATH
  $\rightarrow$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -482,10 +497,9 @@ program      <!-- MATH
  ALT="$ \rightarrow$"></SPAN> declarations  statements         <SPAN CLASS="MATH"><IMG
  WIDTH="10" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img36.png"
- ALT="$ \vert$"></SPAN> statements</I></TD>
+ ALT="$ \vert$"></SPAN> statements</TD>
 </TR>
-<TR><TD ALIGN="LEFT"><I> 
-declarations <!-- MATH
+<TR><TD ALIGN="LEFT">declarations <!-- MATH
  $\rightarrow$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -494,10 +508,9 @@ declarations <!-- MATH
  ALT="$ \rightarrow$"></SPAN> declaration  ';'  declarations    <SPAN CLASS="MATH"><IMG
  WIDTH="10" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img36.png"
- ALT="$ \vert$"></SPAN> declaration ';'</I></TD>
+ ALT="$ \vert$"></SPAN> declaration ';'</TD>
 </TR>
-<TR><TD ALIGN="LEFT"><I> 
-declaration  <!-- MATH
+<TR><TD ALIGN="LEFT">declaration  <!-- MATH
  $\rightarrow$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -506,10 +519,9 @@ declaration  <!-- MATH
  ALT="$ \rightarrow$"></SPAN> INT  idlist                       <SPAN CLASS="MATH"><IMG
  WIDTH="10" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img36.png"
- ALT="$ \vert$"></SPAN> STRING   idlist</I></TD>
+ ALT="$ \vert$"></SPAN> STRING   idlist</TD>
 </TR>
-<TR><TD ALIGN="LEFT"><I> 
-statements   <!-- MATH
+<TR><TD ALIGN="LEFT">statements   <!-- MATH
  $\rightarrow$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -518,10 +530,9 @@ statements   <!-- MATH
  ALT="$ \rightarrow$"></SPAN> statement  ';'  statements        <SPAN CLASS="MATH"><IMG
  WIDTH="10" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img36.png"
- ALT="$ \vert$"></SPAN> statement</I></TD>
+ ALT="$ \vert$"></SPAN> statement</TD>
 </TR>
-<TR><TD ALIGN="LEFT"><I> 
-statement    <!-- MATH
+<TR><TD ALIGN="LEFT">statement    <!-- MATH
  $\rightarrow$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -530,10 +541,9 @@ statement    <!-- MATH
  ALT="$ \rightarrow$"></SPAN> ID '=' expression                 <SPAN CLASS="MATH"><IMG
  WIDTH="10" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img36.png"
- ALT="$ \vert$"></SPAN> P  expression</I></TD>
+ ALT="$ \vert$"></SPAN> P  expression</TD>
 </TR>
-<TR><TD ALIGN="LEFT"><I> 
-expression   <!-- MATH
+<TR><TD ALIGN="LEFT">expression   <!-- MATH
  $\rightarrow$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -542,10 +552,9 @@ expression   <!-- MATH
  ALT="$ \rightarrow$"></SPAN> term '+' expression               <SPAN CLASS="MATH"><IMG
  WIDTH="10" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img36.png"
- ALT="$ \vert$"></SPAN> term</I></TD>
+ ALT="$ \vert$"></SPAN> term</TD>
 </TR>
-<TR><TD ALIGN="LEFT"><I> 
-term         <!-- MATH
+<TR><TD ALIGN="LEFT">term         <!-- MATH
  $\rightarrow$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -554,10 +563,9 @@ term         <!-- MATH
  ALT="$ \rightarrow$"></SPAN> factor '*' term                   <SPAN CLASS="MATH"><IMG
  WIDTH="10" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img36.png"
- ALT="$ \vert$"></SPAN> factor</I></TD>
+ ALT="$ \vert$"></SPAN> factor</TD>
 </TR>
-<TR><TD ALIGN="LEFT"><I> 
-factor       <!-- MATH
+<TR><TD ALIGN="LEFT">factor       <!-- MATH
  $\rightarrow$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -572,10 +580,9 @@ factor       <!-- MATH
  ALT="$ \vert$"></SPAN> NUM <SPAN CLASS="MATH"><IMG
  WIDTH="10" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img36.png"
- ALT="$ \vert$"></SPAN> STR</I></TD>
+ ALT="$ \vert$"></SPAN> STR</TD>
 </TR>
-<TR><TD ALIGN="LEFT"><I> 
-idlist       <!-- MATH
+<TR><TD ALIGN="LEFT">idlist       <!-- MATH
  $\rightarrow$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -584,15 +591,14 @@ idlist       <!-- MATH
  ALT="$ \rightarrow$"></SPAN> ID ',' idlist <SPAN CLASS="MATH"><IMG
  WIDTH="10" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img36.png"
- ALT="$ \vert$"></SPAN> ID
-</I></TD>
+ ALT="$ \vert$"></SPAN> ID</TD>
 </TR>
-</TABLE><I>
+</TABLE>
 <BR>
 <BR>
-</I>
+
 <P>
-<I>En esta gramática, <SPAN CLASS="MATH"><IMG
+En esta gramática, <SPAN CLASS="MATH"><IMG
  WIDTH="17" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img8.png"
  ALT="$ \Sigma$"></SPAN> esta formado por los caracteres entre comillas simples y 
@@ -604,11 +610,12 @@ corresponden a elementos de <SPAN CLASS="MATH"><IMG
  WIDTH="35" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img37.png"
  ALT="$ S =$"></SPAN> program.
-</I>
+
 <P>
-<I>Conteste a las siguientes cuestiones:
-</I>
+Conteste a las siguientes cuestiones:
+
 <P>
+
 <OL>
 <LI>Describa con palabras el lenguaje generado.
 </LI>
@@ -621,7 +628,9 @@ derivaciones a izquierda y a derecha en el apartado <A HREF="node45.html#ejer:ar
 <LI>¿Es ambigua esta gramática?. Justifique su respuesta.
 </LI>
 </OL>
+
 <P>
+
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html1150"
   HREF="node20.html">
