--- a/node20.html
+++ b/node20.html
@@ -120,28 +120,29 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <A NAME="section:predictivo"></A>
 <BR>
 Análisis Sintáctico Predictivo Recursivo
-</H1><I>
+</H1>
 La siguiente fase en la construcción del analizador es la fase de 
 análisis sintáctico. Esta toma como entrada el flujo de terminales
 y construye como salida el árbol de análisis sintáctico abstracto.
-</I>
+
 <P>
-<I>El árbol de análisis sintáctico abstracto es una representación  compactada del árbol 
+El árbol de análisis sintáctico abstracto es una representación  compactada del árbol 
 de análisis sintáctico concreto que contiene la misma información que éste.
-</I>
+
 <P>
-<I>Existen diferentes métodos de análisis sintáctico. La mayoría caen en una de dos categorías:
+Existen diferentes métodos de análisis sintáctico. La mayoría caen en una de dos categorías:
 ascendentes y descendentes. Los ascendentes construyen el árbol desde las hojas
 hacia la raíz. Los descendentes lo hacen en modo inverso. El que describiremos
 aqui es uno de los mas sencillos: se denomina método de análisis predictivo descendente 
 recursivo.
-</I>
+
 <P>
+
 <H2><A NAME="SECTION04221000000000000000"></A>
 <A NAME="subsection:introduccion"></A>
 <BR>
 Introducción
-</H2><I>
+</H2>
 En este método se asocia una subrutina con cada variable sintáctica <SPAN CLASS="MATH"><IMG
  WIDTH="53" HEIGHT="32" ALIGN="MIDDLE" BORDER="0"
  SRC="img38.png"
@@ -150,25 +151,28 @@ En este método se asocia una subrutina con cada variable sintáctica <SPAN CLAS
  WIDTH="18" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img1.png"
  ALT="$ A$"></SPAN>:
-</I>
+
 <P>
-<DIV ALIGN="CENTER"><I><!-- MATH
+<DIV ALIGN="CENTER">
+<!-- MATH
  $L_A(G) = \{ x \in \Sigma^* : A \stackrel{*}{\Longrightarrow} x \}$
  -->
 <SPAN CLASS="MATH"><IMG
  WIDTH="222" HEIGHT="45" ALIGN="MIDDLE" BORDER="0"
  SRC="img39.png"
- ALT="$ L_A(G) = \{ x \in \Sigma^* : A \stackrel{*}{\Longrightarrow} x \}$"></SPAN></I></DIV>
+ ALT="$ L_A(G) = \{ x \in \Sigma^* : A \stackrel{*}{\Longrightarrow} x \}$"></SPAN>
+</DIV>
+
 <P>
-<I>En este método se escribe una rutina <code>A</code> por variable sintáctica <SPAN CLASS="MATH"><IMG
+En este método se escribe una rutina <code>A</code> por variable sintáctica <SPAN CLASS="MATH"><IMG
  WIDTH="53" HEIGHT="32" ALIGN="MIDDLE" BORDER="0"
  SRC="img38.png"
  ALT="$ A \in V$"></SPAN>. 
 Se le da a la rutina asociada el mismo nombre que a la variable sintáctica
 asociada. 
-</I>
+
 <P>
-<I>La función de la rutina <code>A</code> asociada con la variable
+La función de la rutina <code>A</code> asociada con la variable
 <SPAN CLASS="MATH"><IMG
  WIDTH="53" HEIGHT="32" ALIGN="MIDDLE" BORDER="0"
  SRC="img38.png"
@@ -179,9 +183,9 @@ asociada.
  WIDTH="18" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img1.png"
  ALT="$ A$"></SPAN>.
-</I>
+
 <P>
-<I>La estrategia general que sigue la rutina <code>A</code> para reconocer
+La estrategia general que sigue la rutina <code>A</code> para reconocer
 <SPAN CLASS="MATH"><IMG
  WIDTH="43" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img40.png"
@@ -201,9 +205,9 @@ a continuación comprobar que la entrada que sigue pertenece al lenguaje generad
  WIDTH="16" HEIGHT="18" ALIGN="BOTTOM" BORDER="0"
  SRC="img42.png"
  ALT="$ \alpha$"></SPAN>. 
-</I>
+
 <P>
-<I>En un analizador predictivo descendente recursivo (APDR) se asume que
+En un analizador predictivo descendente recursivo (APDR) se asume que
 el símbolo que actualmente
 esta siendo observado (denotado habitualmente como 
 <code>lookahead</code>) permite determinar unívocamente
@@ -211,9 +215,9 @@ que producción de <SPAN CLASS="MATH"><IMG
  WIDTH="18" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img1.png"
  ALT="$ A$"></SPAN> hay que aplicar. 
-</I>
+
 <P>
-<I>Una vez que se ha determinado que la regla por la que continuar la derivación
+Una vez que se ha determinado que la regla por la que continuar la derivación
 es <!-- MATH
  $A \rightarrow \alpha$
  -->
@@ -252,19 +256,22 @@ en <SPAN CLASS="MATH"><IMG
  WIDTH="16" HEIGHT="18" ALIGN="BOTTOM" BORDER="0"
  SRC="img42.png"
  ALT="$ \alpha$"></SPAN> se traducen en llamadas a la correspondiente subrutina asociada con <code>B</code>.
-</I>
+
 <P>
+
 <H4><A NAME="SECTION04221010000000000000">
 Ejemplo</A>
 </H4>
+  
+
 <P>
-<I>Para ilustrar el método,
+Para ilustrar el método,
 simplificaremos la gramática presentada en el ejercicio
 <A HREF="node45.html#ejercicio:tutugrammar">5.1.1</A> eliminando las declaraciones:
-</I>
+
 <P>
 <BR><P></P>
-<DIV ALIGN="CENTER"><A NAME="3943"></A>
+<DIV ALIGN="CENTER"><A NAME="3947"></A>
 <TABLE>
 <CAPTION><STRONG>Tabla:</STRONG>
 Una Gramática Simple</CAPTION>
@@ -336,17 +343,18 @@ Una Gramática Simple</CAPTION>
 <A NAME="table:gramaticasimple"></A></TD></TR>
 </TABLE>
 </DIV><P></P>
-<BR><I>
 <BR>
 <BR>
-</I>
+<BR>
+
 <P>
-<I>La secuencia de llamadas cuando se procesa la entrada mediante 
+La secuencia de llamadas cuando se procesa la entrada mediante 
 el siguiente programa construye 
-<FONT COLOR="#ff0000"> implícitamente</FONT> el <A NAME="4150"></A><SPAN  CLASS="textbf">árbol 
+<FONT COLOR="#ff0000"> implícitamente</FONT> el <A NAME="4154"></A><SPAN  CLASS="textbf">árbol 
 de análisis sintáctico concreto</SPAN>.
-</I>
-<P><PRE>
+
+<P>
+<PRE>
 parse = (input) -&gt;
   tokens = input.tokens()
   lookahead = tokens.shift()
@@ -446,7 +454,9 @@ parse = (input) -&gt;
       input.substr(lookahead.from) + "'"  
   tree
 </PRE>
-<P><PRE>
+
+<P>
+<PRE>
   var parse = function(input) {
     var tokens = input.tokens();
     var lookahead = tokens.shift();
@@ -543,10 +553,13 @@ parse = (input) -&gt;
     return tree;
   }
 </PRE>
+
 <P>
+
 <H4><A NAME="SECTION04221020000000000000">
 Caracterización de las Gramáticas Analizables</A>
-</H4><I>
+</H4>
+  
 
 Como vemos en el ejemplo, el análisis predictivo confía en que, si estamos
 ejecutando la entrada del procedimiento <code>A</code>,
@@ -565,9 +578,9 @@ de producción <!-- MATH
  WIDTH="65" HEIGHT="16" ALIGN="BOTTOM" BORDER="0"
  SRC="img47.png"
  ALT="$ A \rightarrow a \alpha$"></SPAN> que debe ser procesada.
-</I>
+
 <P>
-<I>Si se piensa, esta condición requiere que todas las partes derechas <SPAN CLASS="MATH"><IMG
+Si se piensa, esta condición requiere que todas las partes derechas <SPAN CLASS="MATH"><IMG
  WIDTH="16" HEIGHT="18" ALIGN="BOTTOM" BORDER="0"
  SRC="img42.png"
  ALT="$ \alpha$"></SPAN> de
@@ -590,8 +603,9 @@ conjunto <!-- MATH
  WIDTH="90" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img48.png"
  ALT="$ FIRST(\alpha)$"></SPAN>:
-</I>
-<P><P>
+
+<P>
+<P>
 <DIV><B>Definición  <SPAN CLASS="arabic">2</SPAN>.<SPAN CLASS="arabic">2</SPAN>.<SPAN CLASS="arabic">1</SPAN></B> &nbsp; 
 <I>Dada una gramática 
 <!-- MATH
@@ -647,8 +661,9 @@ conjunto <!-- MATH
 \end{array} \right. $"></SPAN> 
 </I>
 <P></DIV><P></P>
+
 <P>
-<I>Podemos reformular ahora nuestra afirmación anterior en estos términos:
+Podemos reformular ahora nuestra afirmación anterior en estos términos:
 Si <!-- MATH
  $A \rightarrow \gamma_1 \mid \ldots \mid \gamma_n$
  -->
@@ -667,8 +682,9 @@ disjuntos podemos construir el procedimiento para la variable <SPAN CLASS="MATH"
  SRC="img1.png"
  ALT="$ A$"></SPAN> siguiendo
 este seudocódigo:
-</I>
-<P><PRE>
+
+<P>
+<PRE>
 A = function() {
   if (lookahead in FIRST(gamma_1)) { imitar gamma_1 }
   else if (lookahead in FIRST(gamma_2)) { imitar gamma_2 }
@@ -676,8 +692,9 @@ A = function() {
   else (lookahead in FIRST(gamma_n)) { imitar gamma_n }
 }
 </PRE>
+
 <P>
-<I>Donde si <SPAN CLASS="MATH"><IMG
+Donde si <SPAN CLASS="MATH"><IMG
  WIDTH="21" HEIGHT="31" ALIGN="MIDDLE" BORDER="0"
  SRC="img54.png"
  ALT="$ \gamma_j$"></SPAN> es <!-- MATH
@@ -694,7 +711,7 @@ en una secuencia <!-- MATH
  WIDTH="79" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img56.png"
  ALT="$ i = 1 \ldots k$"></SPAN> de llamadas de uno de estos dos tipos:
-</I>
+
 <UL>
 <LI>Llamar a la subrutina <code>X_i</code> si <SPAN CLASS="MATH"><IMG
  WIDTH="25" HEIGHT="32" ALIGN="MIDDLE" BORDER="0"
@@ -707,17 +724,20 @@ en una secuencia <!-- MATH
  ALT="$ X_i$"></SPAN> es un terminal
 </LI>
 </UL>
+
 <P>
+
 <H2><A NAME="SECTION04222000000000000000"></A>
-   <A NAME="4159"></A>
+   <A NAME="4163"></A>
 <BR>
 Ejercicio: Recorrido del árbol en un ADPR
-</H2><I>
+</H2>
   
 ¿En que forma es recorrido el árbol de análisis sintáctico concreto en un 
 analizador descendente predictivo recursivo? ¿En que orden son visitados los nodos?
-</I>
+
 <P>
+
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html1165"
   HREF="node21.html">
