--- a/node21.html
+++ b/node21.html
@@ -103,9 +103,11 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BR>
 Recursión por la Izquierda
 </H1>
-<P><P>
+
+<P>
+<P>
 <DIV><B>Definición  <SPAN CLASS="arabic">2</SPAN>.<SPAN CLASS="arabic">3</SPAN>.<SPAN CLASS="arabic">1</SPAN></B> &nbsp; 
-<I>Una <A NAME="4160"></A><SPAN  CLASS="textbf">gramática es recursiva por la izquierda</SPAN> cuando existe una derivación
+<I>Una <A NAME="4164"></A><SPAN  CLASS="textbf">gramática es recursiva por la izquierda</SPAN> cuando existe una derivación
 <!-- MATH
  $A \stackrel{*}{\Longrightarrow} A \alpha$
  -->
@@ -124,8 +126,9 @@ una regla de producción de la forma <!-- MATH
  SRC="img58.png"
  ALT="$ A \rightarrow A \alpha$"></SPAN>. 
 En este caso se dice que la recursión por la izquierda es directa.</I></DIV><P></P>
+
 <P>
-<I>Cuando la gramática es <A NAME="4162"></A><SPAN  CLASS="textbf">recursiva por la izquierda</SPAN>, 
+Cuando la gramática es <A NAME="4166"></A><SPAN  CLASS="textbf">recursiva por la izquierda</SPAN>, 
 el método 
 de análisis recursivo descendente predictivo no funciona. 
 En ese caso, el procedimiento
@@ -134,8 +137,9 @@ En ese caso, el procedimiento
  SRC="img1.png"
  ALT="$ A$"></SPAN> ciclaría para siempre sin llegar a consumir ningún 
 terminal. 
-</I>
+
 <P>
+
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html1183"
   HREF="node22.html">
