--- a/node33.html
+++ b/node33.html
@@ -124,11 +124,16 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <H1><A NAME="SECTION04450000000000000000">
 PegJS en los Browser</A>
 </H1>
+
 <P>
+
 <H4><A NAME="SECTION04450010000000000000">
 Donde</A>
 </H4>
+  
+
 <P>
+
 <UL>
 <LI><PRE>
 ~/srcPLgrado/pegjs/examples(master)]$ pwd -P
@@ -147,18 +152,23 @@ origin  git@github.com:crguezl/pegjs.git (push)
   HREF="https://github.com/crguezl/pegjs/tree/master/examples">https://github.com/crguezl/pegjs/tree/master/examples</A>
 </LI>
 </UL>
+
 <P>
+
 <UL>
 <LI>
 </LI>
 </UL>
+
 <P>
+
 <H4><A NAME="SECTION04450020000000000000">
 Versiones para Browser</A>
-</H4><I>
+</H4>
+  
 
 Podemos usar directamente las versiones para los browser:
-</I>
+
 <UL>
 <LI><A NAME="tex2html226"
   HREF="https://github.com/dmajda/pegjs/releases/download/v0.8.0/peg-0.8.0.min.js">PEG.js — minified</A>
@@ -167,10 +177,15 @@ Podemos usar directamente las versiones para los browser:
   HREF="https://github.com/dmajda/pegjs/releases/download/v0.8.0/peg-0.8.0.js">PEG.js — development</A>
 </LI>
 </UL>
+
 <P>
+
 <H4><A NAME="SECTION04450030000000000000">
 La opción -e de pegjs</A>
-</H4><PRE>
+</H4>
+  
+
+<PRE>
 [~/Dropbox/src/javascript/PLgrado/jison]$ pegjs --help
 Usage: pegjs [options] [--] [&lt;input_file&gt;] [&lt;output_file&gt;]
 
@@ -189,17 +204,23 @@ Options:
   -v, --version                print version information and exit
   -h, --help                   print help and exit
 </PRE>
+
 <P>
+
 <H4><A NAME="SECTION04450040000000000000">
 Compilación</A>
 </H4>
+  
+
 <P>
-<I>Le indicamos que el parser se guarde en <code>calculator</code>:
-</I><PRE>
+Le indicamos que el parser se guarde en <code>calculator</code>:
+<PRE>
 [~/Dropbox/src/javascript/PLgrado/pegjs/examples(master)]$ rake web
 ../bin/pegjs -e calculator arithmetics.pegjs
 </PRE>
-<P><PRE>
+
+<P>
+<PRE>
 [~/srcPLgrado/pegjs/examples(master)]$ head -5 arithmetics.js 
 calculator = (function() {
   /*
@@ -207,14 +228,17 @@ calculator = (function() {
    *
    * http://pegjs.majda.cz/
 </PRE>
+
 <P>
+
 <H4><A NAME="SECTION04450050000000000000">
 calc.js</A>
-</H4><I>
+</H4>
+  
 
 Ahora, desde el  JavaScript que llama al parser accedemos al objeto
 mediante la variable <code>calculator</code>:
-</I><PRE>
+<PRE>
 [~/srcPLgrado/pegjs/examples(master)]$ cat calc.js 
 $(document).ready(function() {
   $('#eval').click(function() {
@@ -239,13 +263,16 @@ $(document).ready(function() {
 
 });
 </PRE>
+
 <P>
+
 <H4><A NAME="SECTION04450060000000000000">
 arithmetic.pegjs</A>
-</H4><I>
+</H4>
+  
 
 El PEG describe una calculadora:
-</I><PRE>
+<PRE>
 [~/Dropbox/src/javascript/PLgrado/pegjs/examples(master)]$ cat arithmetics.pegjs 
 /*
  * Classic example grammar, which recognizes simple arithmetic expressions like
@@ -282,10 +309,15 @@ LEFTPAR = _"("_
 RIGHTPAR = _")"_
 NUMBER = _ digits:$[0-9]+ _ { return parseInt(digits, 10); }
 </PRE>
+
 <P>
+
 <H4><A NAME="SECTION04450070000000000000">
 calculator.html</A>
-</H4><PRE>
+</H4>
+  
+
+<PRE>
 [~/srcPLgrado/pegjs/examples(master)]$ cat calculator.html 
 &lt;!DOCTYPE HTML&gt;
 &lt;html lang="en"&gt;
@@ -325,11 +357,13 @@ calculator.html</A>
   &lt;/body&gt;
 &lt;/html&gt;
 </PRE>
+
 <P>
-<I>
+
 <img src="pegjs.png">
-</I>
+
 <P>
+
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html1445"
   HREF="node34.html">
