--- a/node38.html
+++ b/node38.html
@@ -117,18 +117,23 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 
 <H1><A NAME="SECTION044100000000000000000">
 Not Predicate: Comentarios Anidados</A>
-</H1><I>
+</H1>
 The following recursive  <A NAME="tex2html232"
   HREF="http://pegjs.majda.cz/">PEG.js</A>
 
 program  matches Pascal-style nested comment syntax:
-</I><PRE>
+<PRE>
 (* which can (* nest *) like this *)
 </PRE>
+
 <P>
+
 <H4><A NAME="SECTION044100010000000000000">
 Pascal_comments.pegjs</A>
-</H4><PRE>
+</H4>
+  
+
+<PRE>
 $ cat pascal_comments.pegjs 
 /* Pascal nested comments */
 
@@ -143,10 +148,15 @@ End   = '*)'
 ANY   =   'z'    /* any character */       { return 'z';  }
         / char:[^z]                        { return char; }
 </PRE>
+
 <P>
+
 <H4><A NAME="SECTION044100020000000000000">
 use_pascal_comments.js</A>
-</H4><PRE>
+</H4>
+  
+
+<PRE>
 $ cat use_pascal_comments.js 
 var PEG = require("./pascal_comments.js");
 var r = PEG.parse(
@@ -154,10 +164,15 @@ var r = PEG.parse(
   " pum pum (* another comment *)");
 console.log(r);
 </PRE>
+
 <P>
+
 <H4><A NAME="SECTION044100030000000000000">
 Ejecución</A>
-</H4><PRE>
+</H4>
+  
+
+<PRE>
 $ ../bin/pegjs pascal_comments.pegjs 
 $ node use_pascal_comments.js 
 [ 'not bla bla ',
@@ -165,11 +180,16 @@ $ node use_pascal_comments.js
   ' pum pum ',
   ' another comment ' ]
 </PRE>
+
 <P>
+
 <H4><A NAME="SECTION044100040000000000000">
 Donde</A>
 </H4>
+  
+
 <P>
+
 <UL>
 <LI><PRE>
 [~/srcPLgrado/pegjs/examples(master)]$ pwd -P
@@ -190,7 +210,9 @@ origin  git@github.com:crguezl/pegjs.git (push)
   HREF="https://github.com/crguezl/pegjs/tree/master/examples">https://github.com/crguezl/pegjs/tree/master/examples</A>
 </LI>
 </UL>
+
 <P>
+
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html1534"
   HREF="node39.html">
