--- a/node39.html
+++ b/node39.html
@@ -101,8 +101,9 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <H1><A NAME="SECTION044110000000000000000">
 Un Lenguaje Dependiente del Contexto</A>
 </H1>
+
 <P>
-<I>El lenguaje <!-- MATH
+El lenguaje <!-- MATH
  $\{ a^n b^n c^n / n \in \mathcal{N} \}$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -110,8 +111,9 @@ Un Lenguaje Dependiente del Contexto</A>
  SRC="img98.png"
  ALT="$ \{ a^n b^n c^n / n \in \mathcal{N} \}$"></SPAN> no puede ser 
 expresado mediante una gramática independiente del contexto.
-</I>
-<P><PRE>
+
+<P>
+<PRE>
 [~/Dropbox/src/javascript/PLgrado/pegjs/examples(master)]$ cat anbncn.pegjs 
 /*
   The following parsing expression grammar describes the classic 
@@ -127,18 +129,20 @@ S = &amp;(A 'c') 'a'+ B !('a'/'b'/'c')
 A = 'a' A? 'b'
 B = 'b' B? 'c'
 </PRE>
+
 <P>
-<I>Este ejemplo puede ser obtenido desde GitHub:
-</I><PRE>
+Este ejemplo puede ser obtenido desde GitHub:
+<PRE>
 [~/Dropbox/src/javascript/PLgrado/pegjs/examples(master)]$ git remote -v
 dmajda  https://github.com/dmajda/pegjs.git (fetch)
 dmajda  https://github.com/dmajda/pegjs.git (push)
 origin  git@github.com:crguezl/pegjs.git (fetch)
 origin  git@github.com:crguezl/pegjs.git (push)
 </PRE>
+
 <P>
-<I>Veamos un ejemplo de uso:
-</I><PRE>
+Veamos un ejemplo de uso:
+<PRE>
 [~/Dropbox/src/javascript/PLgrado/pegjs/examples(master)]$ cat use_anbncn.js 
 var PEG = require("./anbncn.js");
 var r = PEG.parse("aabbcc");
@@ -152,16 +156,19 @@ catch (e) {
   console.log("Grr...."+e);
 }
 </PRE>
+
 <P>
-<I>Ejecución:
-</I><PRE>
+Ejecución:
+<PRE>
 [~/Dropbox/src/javascript/PLgrado/pegjs/examples(master)]$ ../bin/pegjs anbncn.pegjs 
 
 [~/Dropbox/src/javascript/PLgrado/pegjs/examples(master)]$ node use_anbncn.js 
 [ '', [ 'a', 'a' ], [ 'b', [ 'b', '', 'c' ], 'c' ], '' ]
 Grr....SyntaxError: Expected "c" but end of input found.
 </PRE>
+
 <P>
+
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html1552"
   HREF="node40.html">
