--- a/node43.html
+++ b/node43.html
@@ -109,12 +109,13 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION044150000000000000000"></A>
-   <A NAME="5498"></A>
+   <A NAME="5502"></A>
 <BR>
 Práctica: Inventando un Lenguaje: Tortoise
 </H1>
+
 <P>
-<I>El objetivo de esta práctica es crear un lenguaje de programación 
+El objetivo de esta práctica es crear un lenguaje de programación 
 imperativa sencillo de estilo <A NAME="tex2html239"
   HREF="http://en.wikipedia.org/wiki/Logo_programming_language">LOGO</A>.
 Para ello lea el capítulo
@@ -127,19 +128,22 @@ de
 <A NAME="tex2html242"
   HREF="http://nathansjslessons.appspot.com/">Nathan Whitehead</A>.
 Haga todos los ejercicios e implemente el lenguaje descrito.
-</I>
+
 <P>
-<I>Puede encontrar una solución a la práctica en GitHub en el repositorio
+Puede encontrar una solución a la práctica en GitHub en el repositorio
 <A NAME="tex2html243"
   HREF="https://github.com/dingram/pl101">pl101</A>
 de 
 <A NAME="tex2html244"
   HREF="http://www.dmi.me.uk/blog/">Dave Ingram</A>. Usela como guía cuando se sienta desorientado.
-</I>
+
 <P>
+
 <H4><A NAME="SECTION044150010000000000000">
 Recursos</A>
 </H4>
+  
+
 <UL>
 <LI><A NAME="tex2html245"
   HREF="http://nathansuniversity.com/turtle.html">Inventing a Language - Tortoise</A>
@@ -190,9 +194,10 @@ con contenidos del curso PL101
 </LI>
 </UL>
 </LI>
-</UL><I>
-</I>
+</UL>
+
 <P>
+
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html1612"
   HREF="node44.html">
