--- a/node46.html
+++ b/node46.html
@@ -129,17 +129,22 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <H1><A NAME="SECTION04520000000000000000">
 Ejemplo Simple en Jison</A>
 </H1>
+
 <P>
-<I>Jison es un generador de analizadores sintácticos LALR. Otro
+Jison es un generador de analizadores sintácticos LALR. Otro
 analizador LALR es 
 <A NAME="tex2html254"
   HREF="http://jscc.phorward-software.com/">JS/CC</A>.
-</I>
+
 <P>
+
 <H4><A NAME="SECTION04520010000000000000">
 Gramática</A>
 </H4>
-<P><PRE>
+  
+
+<P>
+<PRE>
 %%
 
 S   : A
@@ -148,10 +153,15 @@ A   : /* empty */
     | A x 
     ;
 </PRE>
+
 <P>
+
 <H4><A NAME="SECTION04520020000000000000">
 basic2_lex.jison</A>
-</H4><PRE>
+</H4>
+  
+
+<PRE>
 [~/jison/examples/basic2_lex(develop)]$ cat basic2_lex.jison 
 /* description: Basic grammar that contains a nullable A nonterminal. */
 
@@ -179,10 +189,15 @@ A   : /* empty */
            }
     ;
 </PRE>
+
 <P>
+
 <H4><A NAME="SECTION04520030000000000000">
 index.html</A>
-</H4><PRE>
+</H4>
+  
+
+<PRE>
 $ cat basic2_lex.html
 &lt;!DOCTYPE HTML&gt;
 &lt;html lang="en"&gt;
@@ -205,11 +220,16 @@ $ cat basic2_lex.html
   &lt;/body&gt;
 &lt;/html&gt;
 </PRE>
+
 <P>
+
 <H4><A NAME="SECTION04520040000000000000">
 Rakefile</A>
 </H4>
-<P><PRE>
+  
+
+<P>
+<PRE>
 $ cat Rakefile 
 # install package:
 #     sudo npm install beautifier
@@ -228,16 +248,22 @@ file "basic2_lex_ugly.js" =&gt; %w{basic2_lex.jison} do
   sh "jison basic2_lex.jison -o basic2_lex.js"
 end
 </PRE>
+
 <P>
+
 <OL>
 <LI><A NAME="tex2html255"
   HREF="https://github.com/rickeyski/node-beautifier">node-beautifier</A>
 </LI>
 </OL>
+
 <P>
+
 <H4><A NAME="SECTION04520050000000000000">
 Véase También</A>
 </H4>
+  
+
 <OL>
 <LI><A NAME="tex2html256"
   HREF="http://zaach.github.com/jison/">JISON</A>
@@ -279,7 +305,10 @@ a language written using Jison
 <H4><A NAME="SECTION04520060000000000000">
 global.css</A>
 </H4>
-<P><PRE>
+  
+
+<P>
+<PRE>
 [~/jison/examples/basic2_lex(develop)]$ cat global.css 
 html *
 {
@@ -324,10 +353,13 @@ body
  background-color:#b0c4de;  /* blue */
 }
 </PRE>
+
 <P>
+
 <H2><A NAME="SECTION04521000000000000000">
 Véase También</A>
 </H2>
+
 <OL>
 <LI><A NAME="tex2html266"
   HREF="http://zaach.github.com/jison/">JISON</A>
@@ -362,12 +394,14 @@ a language written using Jison
   HREF="http://blog.kalleberg.org/post/1256702765/prototype-of-a-scannerless-generalized-left-to-right">Prototype of a Scannerless, Generalized Left-to-right Rightmost (SGLR) derivation parser for JavaScript</A>
 </LI>
 </OL>
+
 <P>
+
 <H2><A NAME="SECTION04522000000000000000"></A>
-   <A NAME="6787"></A>
+   <A NAME="6791"></A>
 <BR>
 Práctica: Secuencia de Asignaciones Simples
-</H2><I>
+</H2>
   
 Modifique este ejemplo para que el lenguaje acepte una secuencia
 de sentencias de asignación de la forma <code>ID = NUM</code> separadas
@@ -378,14 +412,15 @@ son los números.
 Clone el repositorio en
 <A NAME="tex2html275"
   HREF="https://github.com/crguezl/jison-basic2">https://github.com/crguezl/jison-basic2</A>.
-</I>
+
 <P>
-<I>Modifique los analizadores léxico y sintáctico de forma conveniente.
-</I>
+Modifique los analizadores léxico y sintáctico de forma conveniente.
+
 <P>
-<I>Añada acciones semánticas para que el analizador devuelva una tabla de símbolos con los identificadores y sus valores.
-</I>
+Añada acciones semánticas para que el analizador devuelva una tabla de símbolos con los identificadores y sus valores.
+
 <P>
+
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html1722"
   HREF="node47.html">
