--- a/node53.html
+++ b/node53.html
@@ -99,16 +99,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <!--End of Navigation Panel-->
 
 <H1><A NAME="SECTION04590000000000000000"></A>
-   <A NAME="6919"></A>
+   <A NAME="6923"></A>
 <BR>
 Práctica: Calculadora  con Funciones
 </H1>
+
 <P>
-<I>Añada funciones y sentencias de llamada a función a la práctica de traducción 
+Añada funciones y sentencias de llamada a función a la práctica de traducción 
 de infijo a postfijo
 <A HREF="node52.html#section:calculadoraampliada">5.8</A>. Sigue un ejemplo de traducción:
-</I>
-<P><TABLE CELLPADDING=3 BORDER="1">
+
+<P>
+<TABLE CELLPADDING=3 BORDER="1">
 <TR><TD ALIGN="LEFT" VALIGN="TOP" WIDTH=170><PRE>
 def f(x) { x + 1 }
 def g(a, b) { a * f(b) }
@@ -142,6 +144,7 @@ g(3, 4)
 </PRE></TD>
 </TR>
 </TABLE>
+
 <UL>
 <LI>Las funciones retornan la última expresión evaluada
 </LI>
@@ -161,7 +164,9 @@ prefijándolos con <code>$</code>.
 y retorna la última expresión evaluada
 </LI>
 </UL>
+
 <P>
+
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html1843"
   HREF="node54.html">
