--- a/node55.html
+++ b/node55.html
@@ -102,13 +102,13 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <A NAME="section:algoritmoLR"></A>
 <BR>
 Algoritmo de Análisis LR
-</H1><I>
+</H1>
 Asi  pues la tabla de transiciones del autómata nos genera dos tablas:
 la tabla de acciones y la de saltos.
 El  algoritmo  de análisis sintáctico <SPAN  CLASS="textbf">LR</SPAN> en el  que 
 se basa <SPAN  CLASS="textbf">jison</SPAN> utiliza una pila y dos tablas 
 para analizar la entrada. Como se ha visto, la tabla  de acciones contiene cuatro tipo de acciones: 
-</I>
+
 <OL>
 <LI>Desplazar (<SPAN  CLASS="textbf">shift</SPAN>)
 </LI>
@@ -118,12 +118,12 @@ para analizar la entrada. Como se ha visto, la tabla  de acciones contiene cuatr
 </LI>
 <LI>Error
 </LI>
-</OL><I>
+</OL>
 El algoritmo utiliza una pila en la que se guardan los estados
 del autómata. De este modo se evita tener que ``comenzar'' 
 el procesado de la forma sentencial derecha resultante
 después de una reducción (antiderivación).
-</I><P>
+<P>
 <DIV><A NAME="alg:parser"><B>Algoritmo  <SPAN CLASS="arabic">5</SPAN>.<SPAN CLASS="arabic">11</SPAN>.<SPAN CLASS="arabic">1</SPAN></B></A> &nbsp; 
 <I>Análizador LR
 </I><PRE>
@@ -147,6 +147,7 @@ después de una reducción (antiderivación).
    }
  }
 </PRE></DIV><P></P>
+
 <UL>
 <LI>Como es habitual, <SPAN CLASS="MATH"><IMG
  WIDTH="24" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
@@ -180,16 +181,18 @@ el código de la acción semántica asociada con la regla <!-- MATH
  ALT="$ A \rightarrow \alpha$"></SPAN>.
 </LI>
 </UL>
+
 <P>
-<I>Todos los analizadores LR comparten, salvo pequeñas
+Todos los analizadores LR comparten, salvo pequeñas
 excepciones, el mismo algoritmo
 de análisis. Lo que más los diferencia es la forma en 
 la que construyen las tablas.
 En <code>jison</code>
 la construcción de las tablas de <SPAN  CLASS="textbf">acciones</SPAN> y <SPAN  CLASS="textbf">gotos</SPAN>
 se realiza  por defecto mediante el algoritmo <SPAN  CLASS="textbf">LALR</SPAN>.
-</I>
+
 <P>
+
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html1871"
   HREF="node56.html">
