--- a/node59.html
+++ b/node59.html
@@ -103,21 +103,25 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BR>
 Manejo en <TT>jison</TT> de Atributos Heredados
 </H1>
+
 <P>
-<I>Supongamos  que <code>jison</code> esta inmerso 
+Supongamos  que <code>jison</code> esta inmerso 
 en la construcción de la antiderivación a derechas y que la forma sentencial
 derecha en ese momento es:
-</I>
+
 <P>
-<DIV ALIGN="CENTER"><I><!-- MATH
+<DIV ALIGN="CENTER">
+<!-- MATH
  $X_m \ldots X_1 X_0 Y_1 \ldots  Y_n a_1 \ldots a_0$
  -->
 <SPAN CLASS="MATH"><IMG
  WIDTH="225" HEIGHT="32" ALIGN="MIDDLE" BORDER="0"
  SRC="img207.png"
- ALT="$ X_m \ldots X_1 X_0 Y_1 \ldots Y_n a_1 \ldots a_0$"></SPAN></I></DIV>
+ ALT="$ X_m \ldots X_1 X_0 Y_1 \ldots Y_n a_1 \ldots a_0$"></SPAN>
+</DIV>
+
 <P>
-<I>y que el mango es <!-- MATH
+y que el mango es <!-- MATH
  $B \rightarrow Y_1 \ldots  Y_n$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -131,17 +135,17 @@ procesar <!-- MATH
  WIDTH="65" HEIGHT="31" ALIGN="MIDDLE" BORDER="0"
  SRC="img209.png"
  ALT="$ a_1 \ldots a_0$"></SPAN>.
-</I>
+
 <P>
-<I>No es posible acceder en <code>jison</code> a los valores de los atributos de los estados en la pila
+No es posible acceder en <code>jison</code> a los valores de los atributos de los estados en la pila
 del analizador que se encuentran ``por debajo'' o si se quiere
 ``a la izquierda'' de los estados asociados
 con la regla por la que se reduce. 
-</I>
+
 <P>
-<I>Vamos a usar un pequeño hack para acceder a los atributos asociados con símbolos vistos 
+Vamos a usar un pequeño hack para acceder a los atributos asociados con símbolos vistos 
 en el pasado "remoto":
-</I><PRE>
+<PRE>
 [~/jison/jison-inherited(grammar)]$ cat inherited.jison 
 %lex
 %%
@@ -179,10 +183,12 @@ L
   ;
 %%
 </PRE>
+
 <P>
-<I>Veamos un ejemplo de ejecución:
-</I>
-<P><PRE>
+Veamos un ejemplo de ejecución:
+
+<P>
+<PRE>
 [~/jison/jison-inherited(grammar)]$ cat input.txt 
 global integer a, b, c
 [~/jison/jison-inherited(grammar)]$ node inherited.js input.txt 
@@ -193,20 +199,22 @@ L -&gt; L ',' id (b)
 L -&gt; L ',' id (c)
 [ null, 'global', 'integer', 'a', ',', 'c' ]
 </PRE>
+
 <P>
-<I>Esta forma de acceder a los atributos es especialmente útil cuando se 
-trabaja con <A NAME="8175"></A><SPAN  CLASS="textbf">atributos heredados</SPAN>. Esto es, cuando un atributo
+Esta forma de acceder a los atributos es especialmente útil cuando se 
+trabaja con <A NAME="8179"></A><SPAN  CLASS="textbf">atributos heredados</SPAN>. Esto es, cuando un atributo
 de un nodo del árbol sintáctico se computa en términos
 de valores de atributos de su padre y/o sus hermanos.
 Ejemplos de atributos heredados son la clase y tipo en la declaración
 de variables. 
-</I>
+
 <P>
-<I>Es importante darse cuenta que en cualquier derivación a derechas
+Es importante darse cuenta que en cualquier derivación a derechas
 desde<code>D</code>, cuando se reduce por una de las reglas 
-</I>
+
 <P>
-<DIV ALIGN="CENTER"><I>L <!-- MATH
+<DIV ALIGN="CENTER">
+L <!-- MATH
  $\rightarrow$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -219,13 +227,16 @@ desde<code>D</code>, cuando se reduce por una de las reglas
  WIDTH="12" HEIGHT="31" ALIGN="MIDDLE" BORDER="0"
  SRC="img200.png"
  ALT="$ _1$"></SPAN> ',' id
-</I></DIV>
+
+</DIV>
+
 <P>
-<I>el símbolo a la izquierda de L es T y el que esta a la izquierda de T es C.
+el símbolo a la izquierda de L es T y el que esta a la izquierda de T es C.
 Considere, por ejemplo la derivación a derechas:
-</I>
+
 <P>
-<DIV ALIGN="CENTER"><I>D <!-- MATH
+<DIV ALIGN="CENTER">
+D <!-- MATH
  $\Longrightarrow$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -270,11 +281,13 @@ Considere, por ejemplo la derivación a derechas:
  WIDTH="33" HEIGHT="18" ALIGN="BOTTOM" BORDER="0"
  SRC="img210.png"
  ALT="$ \Longrightarrow$"></SPAN> local float id, id, id
-</I></DIV>
+
+</DIV>
+
 <P>
-<I>Observe que el orden de recorrido de <code>jison</code> es:
-</I>
-<DIV ALIGN="CENTER"><I>local float id, id, id <!-- MATH
+Observe que el orden de recorrido de <code>jison</code> es:
+<DIV ALIGN="CENTER">
+local float id, id, id <!-- MATH
  $\Longleftarrow$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -319,9 +332,11 @@ C T id, id, id <!-- MATH
  WIDTH="33" HEIGHT="18" ALIGN="BOTTOM" BORDER="0"
  SRC="img211.png"
  ALT="$ \Longleftarrow$"></SPAN> D
-</I></DIV>
+
+</DIV>
+
 <P>
-<I>en la antiderivación, cuando el mango es una de las dos reglas 
+en la antiderivación, cuando el mango es una de las dos reglas 
 para listas de identificadores, L <!-- MATH
  $\rightarrow$
  -->
@@ -336,9 +351,10 @@ para listas de identificadores, L <!-- MATH
  SRC="img35.png"
  ALT="$ \rightarrow$"></SPAN> L, id 
 es decir durante las tres ultimas antiderivaciones:
-</I>
+
 <P>
-<DIV ALIGN="CENTER"><I>C T L, id, id <!-- MATH
+<DIV ALIGN="CENTER">
+C T L, id, id <!-- MATH
  $\Longleftarrow$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -357,14 +373,17 @@ es decir durante las tres ultimas antiderivaciones:
  WIDTH="33" HEIGHT="18" ALIGN="BOTTOM" BORDER="0"
  SRC="img211.png"
  ALT="$ \Longleftarrow$"></SPAN> D
-</I></DIV>
+
+</DIV>
+
 <P>
-<I>las variables a la izquierda del mango son
+las variables a la izquierda del mango son
 T y C. Esto ocurre siempre. 
 Estas observaciones nos conducen al siguiente
 programa <code>jison</code>: 
-</I>
-<P><PRE>
+
+<P>
+<PRE>
 [~/jison/jison-inherited(deepstack)]$ cat inherited.jison 
 %lex
 %%
@@ -408,10 +427,12 @@ L
   ;
 %%
 </PRE>
+
 <P>
-<I>A continuación sigue un ejemplo de ejecución:
-</I>
-<P><PRE>
+A continuación sigue un ejemplo de ejecución:
+
+<P>
+<PRE>
 [~/jison/jison-inherited(deepstack)]$ node inherited.js input.txt 
 L -&gt; id (a)
 a is of type integer
@@ -423,10 +444,11 @@ L -&gt; L ',' id (c)
 c is of type integer
 a is of class global
 </PRE>
+
 <P>
-<I>En este caso, existen varias alternativas simples
+En este caso, existen varias alternativas simples
 a esta solución:
-</I>
+
 <UL>
 <LI>Montar la lista de identificadores  en un array y ponerles el tipo y la clase de "golpe"
  en la regla de producción superior <code>D : C T L ;</code>
@@ -445,7 +467,9 @@ el árbol de análisis sintáctico. Posteriormente podemos recorrer
 el árbol como queramos y tantas veces como queramos.
 </LI>
 </UL>
+
 <P>
+
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html1938"
   HREF="node60.html">
