--- a/node62.html
+++ b/node62.html
@@ -103,10 +103,11 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BR>
 Recuperación de Errores
 </H1>
+
 <P>
-<I>La recuperación de errores no parece estar implementada en Jison.
+La recuperación de errores no parece estar implementada en Jison.
 véase 
-</I>
+
 <UL>
 <LI>la sección 
 <A NAME="tex2html308"
@@ -116,7 +117,8 @@ de la documentación
 <LI><A NAME="tex2html309"
   HREF="https://github.com/zaach/jison/pull/147">Pullreq 5 - parser built-in grammar error recovery was completely broken</A>
 </LI>
-</UL><PRE>
+</UL>
+<PRE>
 [~/srcPLgrado/jison/jison-aSb(error)]$ cat aSb.jison 
 %lex
 %%
@@ -131,7 +133,9 @@ S: /* empty */  { $$ = ''; console.log("empty"); }
 ;
 %%
 </PRE>
-<P><PRE>
+
+<P>
+<PRE>
         parse: function parse(input) {
               var self = this,
                   stack = [0],
@@ -153,7 +157,9 @@ S: /* empty */  { $$ = ''; console.log("empty"); }
                       var errStr = '';
                       if (!recovering) {
 </PRE>
+
 <P>
+
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html1990"
   HREF="node63.html">
