--- a/node67.html
+++ b/node67.html
@@ -125,10 +125,13 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <H1><A NAME="SECTION04610000000000000000">
 La Calculadora</A>
 </H1>
+
 <P>
+
 <H2><A NAME="SECTION04611000000000000000">
 Uso desde Línea de Comandos</A>
-</H2><PRE>
+</H2>
+<PRE>
 [~/src/PL/rexical/sample(master)]$ racc --help
 Usage: racc [options] &lt;input&gt;
     -o, --output-file=PATH           output file name [&lt;input&gt;.tab.rb]
@@ -152,7 +155,9 @@ Usage: racc [options] &lt;input&gt;
         --copyright                  Prints copyright and quit.
         --help                       Prints this message and quit.
 </PRE>
-<P><PRE>
+
+<P>
+<PRE>
 [~/Dropbox/src/PL/rexical/sample(master)]$ cat -n Rakefile 
      1  task :default =&gt; %W{racc rex} do
      2    sh "ruby calc3.tab.rb"
@@ -166,10 +171,13 @@ Usage: racc [options] &lt;input&gt;
     10    sh "rex calc3.rex"
     11  end
 </PRE>
+
 <P>
+
 <H2><A NAME="SECTION04612000000000000000">
 Análisis Léxico con <TT>rexical</TT></A>
-</H2><PRE>
+</H2>
+<PRE>
 [~/Dropbox/src/PL/rexical/sample(master)]$ cat -n calc3.rex
      1  #
      2  # calc3.rex
@@ -187,10 +195,13 @@ Análisis Léxico con <TT>rexical</TT></A>
     14  inner
     15  end
 </PRE>
+
 <P>
+
 <H2><A NAME="SECTION04613000000000000000">
 Análisis Sintáctico</A>
-</H2><PRE>
+</H2>
+<PRE>
 [~/Dropbox/src/PL/rexical/sample(master)]$ cat -n calc3.racc 
      1  #
      2  # A simple calculator, version 3.
@@ -240,16 +251,19 @@ Análisis Sintáctico</A>
     46    end
     47  end
 </PRE>
+
 <P>
+
 <H4><A NAME="SECTION04613010000000000000">
 Precedencias</A>
-</H4><I>
+</H4>
+  
 
 <code>right</code> is yacc's <code>%right</code>, <code>left</code> is yacc's <code>%left</code>.
-</I>
+
 <P>
-<I><code>= SYMBOL</code>  means yacc's <code>%prec SYMBOL</code>:
-</I><PRE>
+<code>= SYMBOL</code>  means yacc's <code>%prec SYMBOL</code>:
+<PRE>
 prechigh
   nonassoc '++'
   left     '*' '/'
@@ -257,7 +271,9 @@ prechigh
   right    '='
 preclow
 </PRE>
-<P><PRE>
+
+<P>
+<PRE>
 rule
   exp: exp '*' exp
      | exp '-' exp
@@ -265,14 +281,18 @@ rule
          :
          :
 </PRE>
+
 <P>
+
 <H4><A NAME="SECTION04613020000000000000">
 Atributos</A>
-</H4><I>
+</H4>
+  
 
 You can use following special local variables in action.
-</I>
+
 <P>
+
 <OL>
 <LI><PRE>
 result ($$)
@@ -294,29 +314,39 @@ _values (...$-2,$-1,$0)
 A stack of values. DO NOT MODIFY this stack unless you know what you are doing.
 </LI>
 </OL>
+
 <P>
+
 <H4><A NAME="SECTION04613030000000000000">
 Declaring Tokens</A>
-</H4><I>
+</H4>
+  
 
 By declaring tokens, you can avoid bugs. 
-</I>
-<P><PRE>
+
+<P>
+<PRE>
 token NUM ID IF
 </PRE>
+
 <P>
+
 <H4><A NAME="SECTION04613040000000000000">
 Opciones</A>
 </H4>
+  
+
 <P>
-<I>You can write options for racc command in your racc file.
-</I>
-<P><PRE>
+You can write options for racc command in your racc file.
+
+<P>
+<PRE>
 options OPTION OPTION ...
-</PRE><I>
+</PRE>
 Options are:
-</I>
+
 <P>
+
 <OL>
 <LI><PRE>
 omit_action_call
@@ -331,24 +361,29 @@ result_var
 use/does not use local variable "result"
 </LI>
 </OL>
+
 <P>
-<I>You can use <code>no_</code> prefix to invert its meanings.
-</I>
+You can use <code>no_</code> prefix to invert its meanings.
+
 <P>
+
 <H4><A NAME="SECTION04613050000000000000">
 User Code Block</A>
 </H4>
+  
+
 <P>
-<I>"User Code Block" is a Ruby source code which is copied to output. There are three user code block, 
+"User Code Block" is a Ruby source code which is copied to output. There are three user code block, 
 "header" 
 "inner" 
 and "
 footer".
-</I>
+
 <P>
-<I>Format of user code is like this:
-</I>
-<P><PRE>
+Format of user code is like this:
+
+<P>
+<PRE>
 ---- header
   ruby statement
   ruby statement
@@ -358,12 +393,13 @@ footer".
   ruby statement
      :
      :
-</PRE><I>
+</PRE>
 If four <code>-</code> exist on line head, 
 racc treat it as beginning of user code block. 
 A name of user code must be one word.
-</I>
+
 <P>
+
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html2068"
   HREF="node68.html">
