--- a/node76.html
+++ b/node76.html
@@ -100,25 +100,27 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 
 <H1><A NAME="SECTION05000000000000000000">
 PARTE: CREATE YOUR OWN PROGRAMMING LANGUAGE</A>
-</H1><I>
+</H1>
 
 A course by 
 <A NAME="tex2html334"
   HREF="https://github.com/nwhitehead">Nathan Whitehead</A>.
-</I>
+
 <UL>
 <LI><A NAME="tex2html335"
   HREF="http://www.youtube.com/user/NathanWhitehead/videos">Nathan Whitehead en YouTube</A>
 </LI>
 </UL>
+
 <P>
-<I>Repositorios relacionados:
-</I>
+Repositorios relacionados:
+
 <UL>
 <LI><A NAME="tex2html336"
   HREF="https://github.com/crguezl/nathanuniversityexercisesPL">https://github.com/crguezl/nathanuniversityexercisesPL</A>
 </LI>
 </UL>
+
 <P>
 <BR> <HR>
 <!--Table of Child-Links-->
