--- a/node23.html
+++ b/node23.html
@@ -102,55 +102,50 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <A NAME="section:eliminarecesquem"></A>
 <BR>
 Eliminación de la Recursión por la Izquierda en un Esquema de Traducción
-</H1><I>
+</H1>
 La eliminación de la recursión por la izquierda es sólo un paso: debe 
 ser extendida a esquemas de traducción, 
 de manera que no sólo se preserve el lenguaje
 sino la secuencia de acciones. Supongamos que tenemos un esquema de
 traducción de la forma:
-</I>
+
 <P>
-<I>
 <BR>
 <BR>
-</I><TABLE CELLPADDING=3>
-<TR><TD ALIGN="LEFT"><I>
-<!-- MATH
+<TABLE CELLPADDING=3>
+<TR><TD ALIGN="LEFT"><!-- MATH
  $A   \rightarrow A \alpha$
  -->
 <SPAN CLASS="MATH"><IMG
  WIDTH="69" HEIGHT="16" ALIGN="BOTTOM" BORDER="0"
  SRC="img58.png"
- ALT="$ A \rightarrow A \alpha$"></SPAN> </I></TD>
-<TD ALIGN="LEFT"><I> <code>{ alpha_action }</code></I></TD>
+ ALT="$ A \rightarrow A \alpha$"></SPAN></TD>
+<TD ALIGN="LEFT"><code>{ alpha_action }</code></TD>
 </TR>
-<TR><TD ALIGN="LEFT"><I> 
-<!-- MATH
+<TR><TD ALIGN="LEFT"><!-- MATH
  $A   \rightarrow A \beta$
  -->
 <SPAN CLASS="MATH"><IMG
  WIDTH="69" HEIGHT="34" ALIGN="MIDDLE" BORDER="0"
  SRC="img67.png"
- ALT="$ A \rightarrow A \beta$"></SPAN> </I></TD>
-<TD ALIGN="LEFT"><I> <code>{ beta_action }</code></I></TD>
+ ALT="$ A \rightarrow A \beta$"></SPAN></TD>
+<TD ALIGN="LEFT"><code>{ beta_action }</code></TD>
 </TR>
-<TR><TD ALIGN="LEFT"><I> 
-<!-- MATH
+<TR><TD ALIGN="LEFT"><!-- MATH
  $A   \rightarrow \gamma$
  -->
 <SPAN CLASS="MATH"><IMG
  WIDTH="55" HEIGHT="32" ALIGN="MIDDLE" BORDER="0"
  SRC="img16.png"
- ALT="$ A \rightarrow \gamma$"></SPAN> </I></TD>
-<TD ALIGN="LEFT"><I> <code>{ gamma_action }</code>
-</I></TD>
+ ALT="$ A \rightarrow \gamma$"></SPAN></TD>
+<TD ALIGN="LEFT"><code>{ gamma_action }</code></TD>
 </TR>
-</TABLE><I>
+</TABLE>
 <BR>
 <BR>
-</I>
+
 <P>
-<I>para una sentencia como <!-- MATH
+para una sentencia como <!-- MATH
  $\gamma \beta \alpha$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -158,12 +153,15 @@ traducción de la forma:
  SRC="img68.png"
  ALT="$ \gamma \beta \alpha$"></SPAN> la secuencia de
 acciones será: 
-</I>
+
 <P>
-<DIV ALIGN="CENTER"><I><code>gamma_action  beta_action alpha_action</code>
-</I></DIV>
+<DIV ALIGN="CENTER">
+<code>gamma_action  beta_action alpha_action</code>
+
+</DIV>
+
 <P>
-<I>¿Cómo construir un esquema de traducción para la gramática resultante
+¿Cómo construir un esquema de traducción para la gramática resultante
 de eliminar la recursión por la izquierda que ejecute las acciones
 asociadas en el mismo orden?. Supongamos para simplificar,
 que las acciones no dependen
@@ -171,14 +169,12 @@ de atributos ni computan atributos, sino que actúan sobre
 variables globales. En tal caso, la siguiente
 ubicación de las acciones da lugar a que se ejecuten en el mismo
 orden:
-</I>
+
 <P>
-<I>
 <BR>
 <BR>
-</I><TABLE CELLPADDING=3>
-<TR><TD ALIGN="LEFT"><I>
-<!-- MATH
+<TABLE CELLPADDING=3>
+<TR><TD ALIGN="LEFT"><!-- MATH
  $A   \rightarrow \gamma$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -187,10 +183,9 @@ orden:
  ALT="$ A \rightarrow \gamma$"></SPAN> <code>{ gamma_action }</code> <SPAN CLASS="MATH"><IMG
  WIDTH="18" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img69.png"
- ALT="$ R$"></SPAN></I></TD>
+ ALT="$ R$"></SPAN></TD>
 </TR>
-<TR><TD ALIGN="LEFT"><I> 
-<!-- MATH
+<TR><TD ALIGN="LEFT"><!-- MATH
  $R   \rightarrow \beta$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -199,10 +194,9 @@ orden:
  ALT="$ R \rightarrow \beta$"></SPAN> <code> { beta_action }</code> <SPAN CLASS="MATH"><IMG
  WIDTH="18" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img69.png"
- ALT="$ R$"></SPAN></I></TD>
+ ALT="$ R$"></SPAN></TD>
 </TR>
-<TR><TD ALIGN="LEFT"><I> 
-<!-- MATH
+<TR><TD ALIGN="LEFT"><!-- MATH
  $R   \rightarrow \alpha$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -211,25 +205,25 @@ orden:
  ALT="$ R \rightarrow \alpha$"></SPAN> <code> { alpha_action }</code> <SPAN CLASS="MATH"><IMG
  WIDTH="18" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img69.png"
- ALT="$ R$"></SPAN></I></TD>
+ ALT="$ R$"></SPAN></TD>
 </TR>
-<TR><TD ALIGN="LEFT"><I> 
-<!-- MATH
+<TR><TD ALIGN="LEFT"><!-- MATH
  $R   \rightarrow \epsilon$
  -->
 <SPAN CLASS="MATH"><IMG
  WIDTH="52" HEIGHT="16" ALIGN="BOTTOM" BORDER="0"
  SRC="img72.png"
- ALT="$ R \rightarrow \epsilon$"></SPAN> 
-</I></TD>
+ ALT="$ R \rightarrow \epsilon$"></SPAN></TD>
 </TR>
 </TABLE>
+
 <P>
-<I>Si hay atributos en juego, la estrategia para construir un
+Si hay atributos en juego, la estrategia para construir un
 esquema de traducción equivalente para la gramática resultante
 de eliminar la recursividad por la izquierda se complica.
-</I>
+
 <P>
+
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html1211"
   HREF="node24.html">
