--- a/node48.html
+++ b/node48.html
@@ -102,22 +102,23 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <A NAME="section:conceptosbasicos"></A>
 <BR>
 Conceptos Básicos del Análisis LR
-</H1><I>
+</H1>
 Los analizadores generados por <code>jison</code> entran en la categoría de analizadores
-<A NAME="6822"></A><SPAN  CLASS="textbf">LR</SPAN>. Estos analizadores construyen una derivación a derechas inversa 
-(o <A NAME="6824"></A><SPAN  CLASS="textbf">antiderivación</SPAN>).
-De ahí la R en LR (del inglés <A NAME="6826"></A><SPAN  CLASS="textbf">rightmost derivation</SPAN>). El árbol sintáctico 
+<A NAME="6826"></A><SPAN  CLASS="textbf">LR</SPAN>. Estos analizadores construyen una derivación a derechas inversa 
+(o <A NAME="6828"></A><SPAN  CLASS="textbf">antiderivación</SPAN>).
+De ahí la R en LR (del inglés <A NAME="6830"></A><SPAN  CLASS="textbf">rightmost derivation</SPAN>). El árbol sintáctico 
 es construido de las hojas hacia la raíz, siendo el último paso en la antiderivación
 la construcción de la primera derivación desde el símbolo de arranque.
-</I>
+
 <P>
-<I>Empezaremos entonces considerando las frases que pueden aparecer en una derivación
-a derechas. Tales frases consituyen el <A NAME="6828"></A><SPAN  CLASS="textbf">lenguaje de las formas sentenciales a rderechas</SPAN> <SPAN CLASS="MATH"><IMG
+Empezaremos entonces considerando las frases que pueden aparecer en una derivación
+a derechas. Tales frases consituyen el <A NAME="6832"></A><SPAN  CLASS="textbf">lenguaje de las formas sentenciales a rderechas</SPAN> <SPAN CLASS="MATH"><IMG
  WIDTH="45" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img100.png"
  ALT="$ FSD$"></SPAN>:
-</I>
-<P><P>
+
+<P>
+<P>
 <DIV><B>Definición  <SPAN CLASS="arabic">5</SPAN>.<SPAN CLASS="arabic">4</SPAN>.<SPAN CLASS="arabic">1</SPAN></B> &nbsp; 
 <I>Dada una gramática <!-- MATH
  $G=(\Sigma,V,P,S)$
@@ -146,8 +147,9 @@ Los elementos de <SPAN CLASS="MATH"><IMG
  WIDTH="45" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img100.png"
  ALT="$ FSD$"></SPAN> se llaman ``formas sentenciales derechas''.</I></DIV><P></P>
+
 <P>
-<I>Dada una gramática no ambigua <!-- MATH
+Dada una gramática no ambigua <!-- MATH
  $G=(\Sigma,V,P,S)$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -171,18 +173,21 @@ de antiderivación consiste en encontrar la última derivación a derechas que d
  WIDTH="75" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img32.png"
  ALT="$ x \in L(G)$"></SPAN> es porque existe una derivación a derechas de la forma
-</I>
+
 <P>
-<DIV ALIGN="CENTER"><I><!-- MATH
+<DIV ALIGN="CENTER">
+<!-- MATH
  $S \stackrel{*}{\Longrightarrow} y A z \Longrightarrow y w z = x$
  -->
 <SPAN CLASS="MATH"><IMG
  WIDTH="187" HEIGHT="45" ALIGN="MIDDLE" BORDER="0"
  SRC="img102.png"
  ALT="$ S \stackrel{*}{\Longrightarrow} y A z \Longrightarrow y w z = x$"></SPAN>. 
-</I></DIV>
+
+</DIV>
+
 <P>
-<I>El problema es averiguar que regla <!-- MATH
+El problema es averiguar que regla <!-- MATH
  $A \rightarrow w$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -212,24 +217,28 @@ seguir y en que lugar de la forma (después de <SPAN CLASS="MATH"><IMG
  SRC="img62.png"
  ALT="$ \beta$"></SPAN> en el ejemplo)
 aplicarla. 
-</I>
+
 <P>
-<DIV ALIGN="CENTER"><I><!-- MATH
+<DIV ALIGN="CENTER">
+<!-- MATH
  $S \stackrel{*}{\Longrightarrow} \beta A w \Longrightarrow \beta \alpha w$
  -->
 <SPAN CLASS="MATH"><IMG
  WIDTH="164" HEIGHT="45" ALIGN="MIDDLE" BORDER="0"
  SRC="img105.png"
  ALT="$ S \stackrel{*}{\Longrightarrow} \beta A w \Longrightarrow \beta \alpha w$"></SPAN>. 
-</I></DIV>
+
+</DIV>
+
 <P>
-<I>La pareja formada por la regla y la posición 
-se denomina <A NAME="6830"></A><SPAN  CLASS="textbf">handle</SPAN>, <A NAME="6832"></A><SPAN  CLASS="textbf">mango</SPAN> o <A NAME="6834"></A><SPAN  CLASS="textbf">manecilla</SPAN> de la forma. Esta denominación viene
+La pareja formada por la regla y la posición 
+se denomina <A NAME="6834"></A><SPAN  CLASS="textbf">handle</SPAN>, <A NAME="6836"></A><SPAN  CLASS="textbf">mango</SPAN> o <A NAME="6838"></A><SPAN  CLASS="textbf">manecilla</SPAN> de la forma. Esta denominación viene
 de la visualización gráfica de la regla de producción como una mano
 que nos permite escalar hacia arriba en el árbol. Los ``dedos'' serían los
 símbolos en la parte derecha de la regla de producción.
-</I>
-<P><P>
+
+<P>
+<P>
 <DIV><B>Definición  <SPAN CLASS="arabic">5</SPAN>.<SPAN CLASS="arabic">4</SPAN>.<SPAN CLASS="arabic">2</SPAN></B> &nbsp; 
 <I>Dada una gramática <!-- MATH
  $G=(\Sigma,V,P,S)$
@@ -250,7 +259,7 @@ símbolos en la parte derecha de la regla de producción.
 <SPAN CLASS="MATH"><IMG
  WIDTH="56" HEIGHT="33" ALIGN="MIDDLE" BORDER="0"
  SRC="img107.png"
- ALT="$ x \in \Sigma^*$"></SPAN>, el <A NAME="6836"></A><SPAN  CLASS="textbf">mango</SPAN> o <A NAME="6838"></A><SPAN  CLASS="textbf">handle</SPAN>  de 
+ ALT="$ x \in \Sigma^*$"></SPAN>, el <A NAME="6840"></A><SPAN  CLASS="textbf">mango</SPAN> o <A NAME="6842"></A><SPAN  CLASS="textbf">handle</SPAN>  de 
 <SPAN CLASS="MATH"><IMG
  WIDTH="16" HEIGHT="18" ALIGN="BOTTOM" BORDER="0"
  SRC="img42.png"
@@ -268,7 +277,6 @@ símbolos en la parte derecha de la regla de producción.
  SRC="img108.png"
  ALT="$ S \begin{array}{c} * \Longrightarrow  {\scriptstyle RM} \end{array} \beta B x \Longrightarrow \beta \gamma x = \alpha$"></SPAN></I></DIV>
 <P></DIV><P></P>
-<I>
 Escribiremos: 
 <!-- MATH
  $handle(\alpha) = (B \rightarrow \gamma, \beta \gamma)$
@@ -294,9 +302,9 @@ Escribiremos:
  WIDTH="134" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img112.png"
  ALT="$ handle_2(\alpha) = \beta \gamma$"></SPAN>
-</I>
+
 <P>
-<I>Si dispusieramos de un procedimiento que fuera capaz de identificar el mango,
+Si dispusieramos de un procedimiento que fuera capaz de identificar el mango,
 esto es, de detectar la regla y el lugar en el que se posiciona, tendríamos un
 mecanismo para construir un analizador. 
 Lo curioso es que, a menudo es posible encontrar un autómata finito que
@@ -308,8 +316,9 @@ reconoce el lenguaje de los prefijos <!-- MATH
  SRC="img113.png"
  ALT="$ \beta \gamma$"></SPAN> que terminan 
 en el mango. Con mas precisión, del lenguaje:
-</I>
-<P><P>
+
+<P>
+<P>
 <DIV><B>Definición  <SPAN CLASS="arabic">5</SPAN>.<SPAN CLASS="arabic">4</SPAN>.<SPAN CLASS="arabic">3</SPAN></B> &nbsp; 
 <I>El conjunto de <SPAN  CLASS="textbf">prefijos viables</SPAN> de una gramática G se define
 como  el conjunto:
@@ -323,8 +332,9 @@ como  el conjunto:
  SRC="img114.png"
  ALT="$ PV = \left \{ \delta \in (\Sigma \cup V)* : \exists S \begin{array}{c} * \Lo...
 ...mbox{ y }\delta es un prefijo de handle_2(\alpha) = \beta \gamma \right \}$"></SPAN></I></DIV></DIV><P></P>
+
 <P>
-<I>Esto es, es el lenguaje de los prefijos viables es el 
+Esto es, es el lenguaje de los prefijos viables es el 
 conjunto de frases que son prefijos de 
 <!-- MATH
  $handle_2(\alpha)) =  \beta \gamma$
@@ -347,9 +357,9 @@ elementos de <SPAN CLASS="MATH"><IMG
  WIDTH="32" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img117.png"
  ALT="$ PV$"></SPAN> se denominan prefijos viables.
-</I>
+
 <P>
-<I>Obsérvese que si se dispone de un autómata que reconoce 
+Obsérvese que si se dispone de un autómata que reconoce 
 <SPAN CLASS="MATH"><IMG
  WIDTH="32" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img117.png"
@@ -381,8 +391,9 @@ sea un sufijo de  <!-- MATH
  WIDTH="26" HEIGHT="34" ALIGN="MIDDLE" BORDER="0"
  SRC="img113.png"
  ALT="$ \beta \gamma$"></SPAN>.
-</I>
-<P><P>
+
+<P>
+<P>
 <DIV><A NAME="definition:slrautomata"><B>Definición  <SPAN CLASS="arabic">5</SPAN>.<SPAN CLASS="arabic">4</SPAN>.<SPAN CLASS="arabic">4</SPAN></B></A> &nbsp; 
 <I>El siguiente autómata finito no determinista puede ser utilizado para
 reconocer el lenguaje de los prefijos viables PV:
@@ -510,8 +521,9 @@ _\uparrow \gamma \forall B \rightarrow \gamma \in P$"></SPAN>
 <LI>Todos los estados definidos (salvo el de muerte) son de aceptación.
 </LI>
 </UL></DIV><P></P>
+
 <P>
-<I>Denotaremos por <SPAN CLASS="MATH"><IMG
+Denotaremos por <SPAN CLASS="MATH"><IMG
  WIDTH="52" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img129.png"
  ALT="$ LR(0)$"></SPAN> a este autómata. Sus estados se denominan <!-- MATH
@@ -525,11 +537,12 @@ autómata nos ayuda a reconocer los prefijos viables <SPAN CLASS="MATH"><IMG
  WIDTH="32" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img117.png"
  ALT="$ PV$"></SPAN>.
-</I>
+
 <P>
-<I>Una vez que se tiene un autómata que reconoce los prefijos viables es posible construir un analizador sintáctico que construye una antiderivación a derechas. La estrategia consiste en ``alimentar'' el autómata con la forma sentencial derecha. El lugar en el que el autómata se detiene, rechazando indica el lugar exacto en el que termina el <SPAN  CLASS="textbf">handle</SPAN> de dicha forma.
-</I>
-<P><P>
+Una vez que se tiene un autómata que reconoce los prefijos viables es posible construir un analizador sintáctico que construye una antiderivación a derechas. La estrategia consiste en ``alimentar'' el autómata con la forma sentencial derecha. El lugar en el que el autómata se detiene, rechazando indica el lugar exacto en el que termina el <SPAN  CLASS="textbf">handle</SPAN> de dicha forma.
+
+<P>
+<P>
 <DIV><A NAME="example:asb"><B>Ejemplo  <SPAN CLASS="arabic">5</SPAN>.<SPAN CLASS="arabic">4</SPAN>.<SPAN CLASS="arabic">1</SPAN></B></A> &nbsp; 
 <I>Consideremos la gramática:
 </I>
@@ -577,11 +590,11 @@ Es bien sabido que el lenguaje <SPAN CLASS="MATH"><IMG
  SRC="img25.png"
  ALT="$ L(G)$"></SPAN> no es regular.
 La figura <A HREF="#fig:nfa">5.1</A> muestra 
-el <A NAME="6840"></A><SPAN  CLASS="textbf">autómata finito no determinista con <SPAN CLASS="MATH"><IMG
+el <A NAME="6844"></A><SPAN  CLASS="textbf">autómata finito no determinista con <SPAN CLASS="MATH"><IMG
  WIDTH="12" HEIGHT="18" ALIGN="BOTTOM" BORDER="0"
  SRC="img5.png"
  ALT="$ \epsilon$"></SPAN>-transiciones</SPAN> 
-(<A NAME="6842"></A><SPAN  CLASS="textbf">NFA</SPAN>)
+(<A NAME="6846"></A><SPAN  CLASS="textbf">NFA</SPAN>)
 que reconoce los prefijos viables de esta gramática, construido
 de acuerdo con el algoritmo <A HREF="#definition:slrautomata">5.4.4</A>.
 </I>
@@ -592,7 +605,7 @@ para una implementación en Jison de una variante de esta gramática.
 </I>
 <P>
 <DIV ALIGN="CENTER"></DIV>
-<DIV ALIGN="CENTER"><A NAME="fig:nfa"></A><A NAME="6336"></A>
+<DIV ALIGN="CENTER"><A NAME="fig:nfa"></A><A NAME="6340"></A>
 <TABLE>
 <CAPTION ALIGN="BOTTOM"><STRONG>Figura 5.1:</STRONG>
 NFA que reconoce los prefijos viables</CAPTION>
@@ -603,7 +616,9 @@ NFA que reconoce los prefijos viables</CAPTION>
 </TABLE>
 </DIV>
 <DIV ALIGN="CENTER"></DIV></DIV><P></P>
-<P><P>
+
+<P>
+<P>
 <DIV><B>Ejercicio  <SPAN CLASS="arabic">5</SPAN>.<SPAN CLASS="arabic">4</SPAN>.<SPAN CLASS="arabic">1</SPAN></B> &nbsp; 
 <I>Simule el comportamiento del autómata sobre la entrada <SPAN CLASS="MATH"><IMG
  WIDTH="38" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
@@ -621,7 +636,9 @@ trazas del autómata para las entradas <SPAN CLASS="MATH"><IMG
 ha construido el autómata con sus sucesivos rechazos? ¿Que terminales
 se puede esperar que hayan en la entrada cuando se produce el rechazo
 del autómata?</I></DIV><P></P>
+
 <P>
+
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html1767"
   HREF="node49.html">
