--- a/node89.html
+++ b/node89.html
@@ -103,9 +103,9 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 &#205;ndice de Figuras</A>
 </H2><OL>
 <LI><A NAME="tex2html278"
-  HREF="node48.html#6336">NFA que reconoce los prefijos viables</A>
+  HREF="node48.html#6340">NFA que reconoce los prefijos viables</A>
 <LI><A NAME="tex2html280"
-  HREF="node49.html#6706">DFA equivalente al NFA de la figura</A> <A HREF="node48.html#fig:nfa">5.1</A></OL></I>
+  HREF="node49.html#6710">DFA equivalente al NFA de la figura</A> <A HREF="node48.html#fig:nfa">5.1</A></OL>
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html2602"
   HREF="node90.html">
