--- a/node9.html
+++ b/node9.html
@@ -1301,24 +1301,28 @@ $ open tests/index.html
 </PRE>
 
 <P>
-Esta información aparece también en las secciones <I>Unit Testing: Mocha
+Esta información aparece también en las secciones <I>Unit Testing: Mocha</I>
 <A HREF="node85.html#subsection:mocha">11.4.1</A> de
 estos apuntes.
-</I>
+
 <P>
+
 <H4><A NAME="SECTION041200200000000000000">
 Manejando tareas en JS: Gulp</A>
 </H4>
+  
+
 <P>
-<I>Why would you want to use a <A NAME="2848"></A><SPAN  CLASS="textbf">task runner</SPAN>? 
-</I>
+Why would you want to use a <A NAME="2848"></A><SPAN  CLASS="textbf">task runner</SPAN>? 
+
 <P>
-<I>They’re small applications that automate often time consuming and boring tasks. 
-</I>
+They’re small applications that automate often time consuming and boring tasks. 
+
 <P>
-<I>If you ever need to do any of the following then a task runner is for you:
-</I>
+If you ever need to do any of the following then a task runner is for you:
+
 <P>
+
 <UL>
 <LI>Minification and concatenation of JavaScript and CSS files
 </LI>
@@ -1326,13 +1330,14 @@ Manejando tareas en JS: Gulp</A>
 </LI>
 <LI>Testing 
 </LI>
-</UL><I>
+</UL>
 By creating a task file you can instruct the task manager to take care of many development tasks and watch for changes in relevant files. All you’ll need to do is start up the task runner and get to work on the more interesting parts of your project.
-</I>
+
 <P>
-<I>We are going to use <code>gulp</code> as our task manager. To install it you can:
-</I>
+We are going to use <code>gulp</code> as our task manager. To install it you can:
+
 <P>
+
 <UL>
 <LI>Install gulp globally:
 
@@ -1357,9 +1362,10 @@ it will add a line to <code>package.json</code> as the following:
 </PRE>
 </LI>
 </UL>
+
 <P>
-<I>Now we can write our <code>gulpfile</code>:
-</I><PRE>
+Now we can write our <code>gulpfile</code>:
+<PRE>
 [/tmp/pl-grado-temperature-converter(karma)]$ cat gulpfile.js 
 var gulp    = require('gulp'),
     gutil   = require('gulp-util'),
@@ -1387,7 +1393,9 @@ gulp.task('clean', function(cb) {
   del(['minified/*'], cb);
 });
 </PRE>
+
 <P>
+
 <UL>
 <LI><A NAME="tex2html45"
   HREF="https://github.com/gulpjs/gulp/blob/master/docs/API.md">See gulp API docs</A>
@@ -1404,58 +1412,62 @@ method and passes it to the specific plugin being referenced.
 <LI><code>gulp.watch(glob, fn)</code> – runs a function when a file that matches the glob changes
 </LI>
 </UL>
+
 <P>
-<I>Gulp on its own doesn’t do a lot. We need to install plugins and add tasks to the gulpfile to put Gulp into action. To concatenate files we’ll need the gulp-concat plugin; to install it run this from the command line:-
-</I>
-<P><PRE>
+Gulp on its own doesn’t do a lot. We need to install plugins and add tasks to the gulpfile to put Gulp into action. To concatenate files we’ll need the gulp-concat plugin; to install it run this from the command line:-
+
+<P>
+<PRE>
 npm install gulp-concat --save-dev
-</PRE><I>
+</PRE>
 the four Gulp methods that we will be using:-
 Again, if you check your <code>package.json</code> 
 file you should see a new line referencing the newly installed plugin:-
-</I>
-<P><PRE>
+
+<P>
+<PRE>
 "gulp-concat": "~2.1.7"
 </PRE>
+
 <P>
-<I>Después de instalar todas las dependencias:
-</I><PRE>
+Después de instalar todas las dependencias:
+<PRE>
 $ npm i gulp-util --save-dev
 $ npm i gulp-...  --save-dev
-</PRE><I>
+</PRE>
 podemos ejecutar las tareas:
-</I><PRE>
+<PRE>
 $ gulp minify
 [22:07:58] Using gulpfile ~/local/src/javascript/PLgrado/temperature/gulpfile.js
 [22:07:58] Starting 'minify'...
-</PRE><I>
+</PRE>
 Que produce el directorio <code>minified</code>:
-</I><PRE>
+<PRE>
 $ ls -l minified/
 total 32
 -rw-r--r--  1 casiano  staff   510  5 feb 21:56 global.css
 -rw-r--r--  1 casiano  staff   594  5 feb 21:56 index.html
 -rw-r--r--  1 casiano  staff  2021  5 feb 21:56 normalize.css
 -rw-r--r--  1 casiano  staff   334  5 feb 21:56 temperature.js
-</PRE><I>
+</PRE>
 que como vemos ha compactado los ficheros:
-</I><PRE>
+<PRE>
 $ ls -l temperature.js normalize.css index.html global.css 
 -rw-r--r--  1 casiano  staff   934  4 feb 09:11 global.css
 -rw-r--r--  1 casiano  staff   749  3 feb 10:40 index.html
 -rw-r--r--  1 casiano  staff  7798 30 ene 22:00 normalize.css
 -rw-r--r--  1 casiano  staff   638  3 feb 15:21 temperature.js
-</PRE><I>
+</PRE>
 Podemos ver la lista de tareas mediante la opción <code>-T</code>:
-</I><PRE>
+<PRE>
 $ gulp -T
 [22:00:40] Using gulpfile ~/local/src/javascript/PLgrado/temperature/gulpfile.js
 [22:00:40] Tasks for ~/local/src/javascript/PLgrado/temperature/gulpfile.js
 [22:00:40] |-- minify
 [22:00:40] `-- clean
-</PRE><I>
+</PRE>
 Podemos borrar las ficheros generados con <code>gulp clean</code>:
-</I><PRE>
+<PRE>
 $ gulp clean
 [22:00:46] Using gulpfile ~/local/src/javascript/PLgrado/temperature/gulpfile.js
 [22:00:46] Starting 'clean'...
@@ -1463,10 +1475,12 @@ $ gulp clean
 $ ls -l minified/
 $
 </PRE>
+
 <P>
-<I>gulp has very few flags to know about. All other flags are for tasks to use if needed.
-</I>
+gulp has very few flags to know about. All other flags are for tasks to use if needed.
+
 <P>
+
 <UL>
 <LI><code>-v</code> or <code>--version</code> will display the global and local gulp versions
 </LI>
@@ -1487,27 +1501,40 @@ $
 <LI><code>--silent</code> will disable all gulp logging
 </LI>
 </UL>
+
 <P>
-<I>Tasks can be executed by running <code>gulp &lt;task&gt; &lt;othertask&gt;</code>. Just running <code>gulp</code> will execute the task you registered called <code>default</code>. If there is no <code>default</code> task gulp will error.
-</I>
+Tasks can be executed by running <code>gulp &lt;task&gt; &lt;othertask&gt;</code>. 
+
 <P>
-<I>See 
+Just running <code>gulp</code> will execute the task you registered called <code>default</code>. 
+
+<P>
+If there is no <code>default</code> task gulp will error.
+
+<P>
+See 
 <A NAME="tex2html46"
   HREF="https://github.com/gulpjs/gulp/blob/master/docs/CLI.md">CLI.md</A>
 at <code>gulpjs/gulp</code>.
-</I>
+
 <P>
+
 <H4><A NAME="SECTION041200210000000000000">
 Karma</A>
 </H4>
+  
+
 <P>
-<I>Veáse la sección
+Veáse la sección
 <I>Karma</I> <A HREF="node85.html#subsection:karma">11.4.2</A>.
-</I>
+
 <P>
+
 <H4><A NAME="SECTION041200220000000000000">
 Pruebas: Véase</A>
 </H4>
+  
+
 <UL>
 <LI><A NAME="tex2html47"
   HREF="https://nicolas.perriault.net/code/2013/testing-frontend-javascript-code-using-mocha-chai-and-sinon/">Testing your frontend JavaScript code using mocha, chai, and sinon</A>
@@ -1532,7 +1559,9 @@ Screencast.
   HREF="http://youtu.be/MVw8N3hTfCI">Vojta Jina: Testacular (now Karma) - JavaScript test runner</A>. YouTube.
 </LI>
 </UL>
+
 <P>
+
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html936"
   HREF="node10.html">
